[package]
name = "deepseekbot"
version = "0.1.0"
edition = "2021"

[lib]
name = "deepseekbot"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["full", "rt-multi-thread", "process"] } # Add process feature
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
anchor-lang = { version = "0.29.0", features = ["derive"] }
anchor-client = "0.29.0"
solana-client = "1.18.26"
solana-sdk = "1.18.26"
solana-program = "1.18.26"
spl-token = "4.0.0"
spl-associated-token-account = "2.0.0"
anyhow = "1.0"
dialoguer = "0.11.0"
console = "0.15.7"
dotenv = "0.15.0"
rand = "0.8.5"
solana-account-decoder = "1.18.26"
bs58 = "0.5.0"